fix z-index header

--- a/base/src/scss/_header.scss
+++ b/base/src/scss/_header.scss
@@ -104,6 +104,7 @@
 
 header#content-header {
   position: relative;
+  z-index: 1;
 }
 
 @include media-breakpoint-down(lg) {
